--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-.cproject
-.project
-.pydevproject
+/.cproject
+/.project
+/.pydevproject
+/build
+CMakeFiles
+CMakeCache.txt
+cmake_install.cmake
+*.a
