added unit tests support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,14 @@ project(cryptopp-bindings-api)
 
 include_directories(.)
 
+# add custom modules
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+
+# sets the C++ version to C++0x
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
-add_subdirectory(src build)
+# adds the src directory
+add_subdirectory(src build/lib)
+
+# adds unit tests
+add_subdirectory(tests build/tests EXCLUDE_FROM_ALL)
