make test now executes google test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ target_link_libraries(cryptopp-bindings-api-tests cryptopp-bindings-api)
 
 add_test(cryptopp-bindings-api-tests cryptopp-bindings-api-tests)
 
-add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
+add_custom_target(check cryptopp-bindings-api-tests)
 add_dependencies(check cryptopp-bindings-api-tests)
 
 # add Google Test library
