--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,9 @@ enable_testing()
 add_executable(
     cryptopp-bindings-api-tests
     test_api_assertions.cpp
+
     hash/test_api_hash_md5.cpp
+    hash/test_api_hash_sha1.cpp
 )
 
 target_link_libraries(cryptopp-bindings-api-tests cryptopp-bindings-api)
