added hmac unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(
     hash/test_api_hash_sha3_256.cpp
     hash/test_api_hash_sha3_384.cpp
     hash/test_api_hash_sha3_512.cpp
+
+    mac/test_api_mac_hmac.cpp
 )
 
 target_link_libraries(cryptopp-bindings-api-tests cryptopp-bindings-api)
