--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,8 @@ add_executable(
 
     symmetric/cipher/block/test_api_block_cipher_aes.cpp
 
+    symmetric/cipher/stream/test_api_stream_cipher_sosemanuk.cpp
+
     symmetric/mode/test_api_symmetric_mode_ecb.cpp
     symmetric/mode/test_api_symmetric_mode_cbc.cpp
     symmetric/mode/test_api_symmetric_mode_cfb.cpp
